--- a/Playground.html
+++ b/Playground.html
@@ -51,9 +51,9 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
+                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
@@ -102,10 +102,15 @@
     <!-- Page Header Start -->
     <div class="container-fluid playground-page-header page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container text-center py-5">
-            <h1 class="display-2 text-white mb-4 animated slideInDown">Playground</h1>
-            <h2 class="text-white mb-4">Submarina is the exclusive agent for <a href="https://www.jinmarides.com/"
-                    target="_blank">Jinma Rides</a> Company and the exclusive agent for the Italian company called <a
-                    href="https://www.fabbrigroup.com//" target="_blank">Fabbri Group</a></h2>
+            <h1 class="display-2  text-white mb-4 animated slideInDown">Playground</h1>
+            <h2 class="text-white mb-4 playground-text">
+                Submarina is the exclusive agent for <a href="https://www.jinmarides.com/" target="_blank">Jinma
+                    Rides</a> Company
+                and the exclusive agent for the Italian company called <a href="https://www.fabbrigroup.com//"
+                    target="_blank">Fabbri Group</a>
+            </h2>
+
+
 
         </div>
     </div>
@@ -468,40 +473,39 @@
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
 
-                <div class="project-item mb-5" style="height: 300px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-1.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Playground/edutainment-1.jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-1.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                                href="img/Sectores/Playground/edutainment-1.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
 
 
 
-                <div class="project-item mb-5" style="height: 300px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-2.jpg" alt="">
+                        <img class="img-fluid" src="img/Sectores/Playground/edutainment-2.jpg" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-2.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                                href="img/Sectores/Playground/edutainment-2.jpg" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
 
 
 
-                <div class="project-item mb-5" style="height: 300px;">
+                <div class="project-item mb-5">
                     <div class="position-relative">
-                        <img class="img-fluid" src="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-4jpg.jpg"
-                            alt="">
+                        <img class="img-fluid" src="img/Sectores/Playground/edutainment-3.webp" alt="">
                         <div class="project-overlay">
                             <a class="btn btn-lg-square btn-light rounded-circle m-1"
-                                href="img/Sectores/Submarines/sectors-sliders/Sub-Catamaran-4jpg.jpg"
-                                data-lightbox="project"><i class="fa fa-eye"></i></a>
+                                href="img/Sectores/Playground/edutainment-3.webp" data-lightbox="project"><i
+                                    class="fa fa-eye"></i></a>
                         </div>
                     </div>
                 </div>
@@ -540,41 +544,6 @@
     <!-- Custom Video Modal End -->
 
 
-    <!-- Service Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <p class="fs-5 fw-medium text-primary">Important Documents</p>
-                <h1 class="display-5 mb-5">Explore Our Essential Files</h1>
-            </div>
-            <div class="row g-4 d-flex justify-content-sm-around ">
-                <div class="col-lg-4 col-md-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="service-item position-relative h-100">
-                        <div class="service-text rounded p-5">
-                            <div class="btn-square bg-light rounded-circle mx-auto mb-4"
-                                style="width: 64px; height: 64px;">
-                                <img class="img-fluid" src="img/Sectores/safari-zoo/icons/graph-presentation.png"
-                                    alt="Icon">
-                            </div>
-                            <h5 class="mb-3"> Document Covers The Different Types of Underwater Vessels </h5>
-                        </div>
-                        <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-danger fw-medium"
-                                href="https://drive.google.com/file/d/1XQFOyGXIuoSTp_iUNLDTZzM0gzIQG4tv/view?usp=sharing"
-                                target="_blank" rel="noopener">Read More<i
-                                    class="bi bi-chevron-double-right ms-2"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-            </div>
-        </div>
-    </div>
-    <!-- Service End -->
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark footer mt-5 py-2 wow fadeIn" data-wow-delay="0.1s">
@@ -582,9 +551,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light rounded-circle me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
