--- a/Ferris_wheels.html
+++ b/Ferris_wheels.html
@@ -51,9 +51,9 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
+                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
@@ -116,7 +116,7 @@
     <!-- Project Start -->
     <div class="container-xxl pt-5">
         <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 450px;">
+            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 800px;">
                 <p class="fs-5 fw-medium text-primary">Ferris wheels Gallery</p>
                 <h1 class="display-5 mb-5">Explore Our Photos and Videos</h1>
             </div>
@@ -249,9 +249,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light rounded-circle me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
