--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <h2 class="text-white fw-bold m-0">SubMarina</h2>
                 </a>
                 <div class="ms-auto d-flex align-items-center">
-                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</small>
-                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>info@example.com</small>
-                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</small>
+                    <small class="ms-4"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</small>
+                    <small class="ms-4"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</small>
+                    <small class="ms-4"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</small>
                     <div class="ms-3 d-flex">
                         <a class="btn btn-sm-square btn-light text-primary rounded-circle ms-2" href=""><i
                                 class="fab fa-facebook-f"></i></a>
@@ -105,7 +105,7 @@
 
                 <div class="carousel-item active">
                     <img class="w-100" src="./img/LandingPage/dl.beatsnoop.com-3000-7VTyCbPKr8.jpg" alt="Image">
-                    <div class="carousel-caption">
+                    <div class="carousel-caption carousel">
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-lg-7 text-start">
@@ -114,9 +114,9 @@
                                     </p>
                                     <h1 class="display-1 text-white mb-4 animated slideInRight">Embrace the Chill, Dive
                                         into Adventure</h1>
-                                    <a href=""
+                                    <!-- <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInRight">Explore
-                                        More</a>
+                                        More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -134,29 +134,9 @@
                                     </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInLeft">Splash, Slide, and Soak
                                         Up the Fun!</h1>
-                                    <a href=""
+                                    <!-- <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="carousel-item">
-                    <img class="w-100" src="./img/LandingPage/dl.beatsnoop.com-3000-7VTyCbPKr8.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-end">
-                                <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInRight">Welcome to
-                                        <strong>SubMarina</strong>
-                                    </p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInLeft">Experience stunning views
-                                        from above with our Teleferic rides</h1>
-                                    <a href=""
-                                        class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
+                                        More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -169,14 +149,15 @@
                         <div class="container">
                             <div class="row justify-content-end">
                                 <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInLeft">Welcome to
+                                    <p class="fs-4 text-white animated slideInRight">Welcome to
                                         <strong>SubMarina</strong>
                                     </p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInLeft">Rise above the excitement
+                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Rise above the
+                                        excitement
                                         on our Ferris Wheels</h1>
-                                    <a href=""
+                                    <!-- <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
+                                        More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -184,48 +165,6 @@
                 </div>
 
 
-                <div class="carousel-item">
-                    <img class="w-100" src="./img/LandingPage/SubMarins.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-end">
-                                <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInLeft">Welcome to
-                                        <strong>SubMarina</strong>
-                                    </p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Plunge into the Depths
-                                        of
-                                        Excitement!</h1>
-                                    <a href=""
-                                        class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-                <div class="carousel-item">
-                    <img class="w-100" src="./img/LandingPage/Zoo.jpg" alt="Image">
-                    <div class="carousel-caption">
-                        <div class="container">
-                            <div class="row justify-content-end">
-                                <div class="col-lg-7 text-end">
-                                    <p class="fs-4 text-white animated slideInLeft">Welcome to
-                                        <strong>SubMarina</strong>
-                                    </p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Roar with Delight at
-                                        Every Discovery!</h1>
-                                    <a href=""
-                                        class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
 
                 <div class="carousel-item">
@@ -237,11 +176,11 @@
                                     <p class="fs-4 text-white animated slideInLeft">Welcome to
                                         <strong>SubMarina</strong>
                                     </p>
-                                    <h1 class="display-1 text-white mb-5 animated slideInRight">Where Fun Knows No
+                                    <h1 class="display-1 text-white mb-5 animated slideInLeft">Where Fun Knows No
                                         Bounds</h1>
-                                    <a href=""
+                                    <!-- <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
+                                        More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -260,9 +199,9 @@
                                     </p>
                                     <h1 class="display-1 text-white mb-5 animated slideInRight">Explore the Mysteries of
                                         the Deep in Tourist Submarines!</h1>
-                                    <a href=""
+                                    <!-- <a href=""
                                         class="btn btn-primary rounded-pill py-3 px-5 animated slideInLeft">Explore
-                                        More</a>
+                                        More</a> -->
                                 </div>
                             </div>
                         </div>
@@ -400,6 +339,8 @@
                 <h1 class="display-5 mb-5">Explore the Seven Sectors of Fun</h1>
             </div>
             <div class="row g-4 justify-content-center ">
+
+
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item position-relative h-100">
                         <div class="service-text rounded p-5">
@@ -412,7 +353,7 @@
                                     adventures for all</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Indoor_ski_dome.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -429,7 +370,7 @@
                                     ocean's mysteries</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Submarines.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -446,7 +387,7 @@
                                     pools await</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Playground.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -463,7 +404,7 @@
                                     pools await</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Aqua_park.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -477,11 +418,11 @@
                                 <img class="img-fluid" src="img/icon/safari.png" alt="Icon">
                             </div>
                             <h5 class="mb-3">Safari zoo</h4>
-                                <p class="mb-0">Embark on wild adventures with our Wild Encounters! Explore exotic
-                                    habitats and meet fascinating wildlife</p>
+                                <p class="mb-0">Embark on wild adventures with our Wild Encounters! meet fascinating
+                                    wildlife</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="safari_zoo.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -494,12 +435,12 @@
                                 style="width: 64px; height: 64px;">
                                 <img class="img-fluid" src="img/icon/mountains.png" alt="Icon">
                             </div>
-                            <h5 class="mb-3">Teleferic</h4>
+                            <h5 class="mb-3">Teleferik</h4>
                                 <p class="mb-0">Glide through the skies on our Sky Rides! Experience stunning views and
                                     memorable moments</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Teleferik.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -517,7 +458,7 @@
                                     spectacular views and create lasting memories with friends and family</p>
                         </div>
                         <div class="service-btn rounded-0 rounded-bottom">
-                            <a class="text-primary fw-medium" href="">Read More<i
+                            <a class="text-primary fw-medium" href="Ferris_wheels.html">Read More<i
                                     class="bi bi-chevron-double-right ms-2"></i></a>
                         </div>
                     </div>
@@ -823,9 +764,9 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Jeddah, Saudi</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+966 55 553 0626</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>official.submarina@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-light rounded-circle me-2" href=""><i
                                 class="fab fa-twitter"></i></a>
