update-section-margin

--- a/Submarines.html
+++ b/Submarines.html
@@ -129,7 +129,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">Luxury Yacht</h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Luxury Yacht</p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -188,7 +188,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">conventional submarine</h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">conventional submarine</p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -243,7 +243,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">Semi Submarine</h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Semi Submarine</p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -301,7 +301,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">Sub Catamaran </h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Sub Catamaran </p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -360,7 +360,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">parasailing </h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">parasailing </p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
@@ -437,7 +437,7 @@
     <div class="container-xxl pt-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <h1 class="display-1 text-black  mb-4 animated slideInRight">Glass Boat </h1>
+                <p class="fs-1 pb-2  fw-bold  text-dark  animated slideInRight">Glass Boat </p>
             </div>
             <div class="owl-carousel project-carousel wow fadeInUp" data-wow-delay="0.1s">
 
