--- a/Teleferik.html
+++ b/Teleferik.html
@@ -183,6 +183,31 @@
                          </div>
                     </div>
 
+
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Al-noor-2.jpg" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Teleferic/Al-noor-2.jpg" data-lightbox="project"><i
+                                             class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+                    <div class="project-item mb-5">
+                         <div class="position-relative">
+                              <img class="img-fluid" src="img/Sectores/Teleferic/Al-Thore-2.jpg" alt="">
+                              <div class="project-overlay">
+                                   <a class="btn btn-lg-square btn-light rounded-circle m-1"
+                                        href="img/Sectores/Teleferic/Al-Thore-2.jpg" data-lightbox="project"><i
+                                             class="fa fa-eye"></i></a>
+                              </div>
+                         </div>
+                    </div>
+
+
                </div>
           </div>
      </div>
